# ChangeLog for dev-python/django-baker
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/django-baker/ChangeLog,v 1.3 2015/03/07 09:52:53 jlec Exp $

*django-baker-0.11-r2 (07 Mar 2015)

  07 Mar 2015; Justin Lecher <jlec@gentoo.org> +django-baker-0.11-r2.ebuild,
  +files/django-baker-0.11-py3-iter.patch, -django-baker-0.11-r1.ebuild:
  Fix compatibility for py3

*django-baker-0.11-r1 (01 Mar 2015)

  01 Mar 2015; Justin Lecher <jlec@gentoo.org> +django-baker-0.11-r1.ebuild,
  +files/django-baker-0.11-py3-backport.patch, -django-baker-0.11.ebuild:
  Fix py3 support

*django-baker-0.11 (01 Mar 2015)

  01 Mar 2015; Justin Lecher <jlec@gentoo.org> +django-baker-0.11.ebuild,
  +metadata.xml:
  New package written by me