@@ -4,25 +4,25 @@ Hash: SHA512
 AUX django-baker-0.11-py3-backport.patch 2127 SHA256 6ad6ff8459547917723d82a9ef469fd5e993dca88543954788eb5d516efb6f8b SHA512 bc5785df9258579b3f583f4573e8907f5794f2a09576e91f770fe2e19b74043db1068c493cf0c0d7f448a4d1cbc7774187b474dd3d3c1cf80a1a68e2d4d77c54 WHIRLPOOL 75fcf909cd457e3cd3ca9d77e91926f637e8099547aa980c2e56569511372ab4e13fdd3ad563c55521da89f0057d8dd0440635c8e50bb587413f79afbdbd6984
 AUX django-baker-0.11-py3-iter.patch 1820 SHA256 3f38e4539ab2e87cefec42649a92778fa5b441e0c8cfe579ac7c10763584ca72 SHA512 d20fbb4ae9de91c3af36a902a5600f3f4dbaae82e7c33285f157fc3a40cc416e3fd2ce0a453e6138d7381fdbe1834694eacb2214a49b9528dc0c8b26e5ac5f47 WHIRLPOOL 61c75a1a52ad9d6ef8545f30ce88c69db884b9f9748d590ce30ba7b291be8296a94e4a067a09fc2a7a97610951b39c5a2b650993a646c3a2fcf6da51b3c74805
 DIST django-baker-0.11.tar.gz 14920 SHA256 b656577f8234529374251ccf760a0e3e4cda613ea4a19ee17ae87647aeefc364 SHA512 98a64efec8a0cabe9c4091852f3dcbff95007c0ff2020b782f73ab6cc5e3d73cd52356546f1f64b55a69fefdf8f053d95d604584831cf07cb1b8037446892439 WHIRLPOOL 8feddec1f8dd57bdbfe7632c0da998ddaabdc0fb4711a84d9a31b1f0c4db15282311d41db323549a15fefebc41bde605b6f9052c215d756f56968c432529f33a
-EBUILD django-baker-0.11-r2.ebuild 719 SHA256 beb68797393aae7909fdc10c014bb021c9e4fccb461c5497788454a2218b39df SHA512 31b210a6d9f0b9174850380fc7e6475199d6bee34605a232469f54c458e18e8b982cef28e49c0b2a7b4f4239b719b5ab8e92d168025937cd2c7b7fbf9da1d37e WHIRLPOOL c6ff7ed8b71ecb81a686eaa0ebaab84df1cee99cfe9685156be431d5db2027f0632dab88bbaa3d8a4ed31aa0ff3598bd37c590ce841abecfc4bd50e6cb0f7806
-MISC ChangeLog 793 SHA256 89f130bb8d441e6bdb21657e0bc3f2a7eb4605b9c713d209f65d1373c9ab3145 SHA512 c5069783e6fb67646ad5a8f4f35a2228af1f4c5a6863e6fb433f0aaaa82e92db2337a36156b912cf6af19c794e9467d958b94eb11526513b76809e9e47010c81 WHIRLPOOL e84cb704a28289113eb44c67aefa9bfcc300f4416825b760f864432d5b106a965766550b9a7a94c38af2c0bc4c2186db08c75c348618209f947bbada96db6224
+EBUILD django-baker-0.11-r2.ebuild 724 SHA256 f8b7a55bd052275686c460b6b71d56d49380adfc449e7c0cc5b6a341d01e9c04 SHA512 59ccc92b82d2e6650f59b0ae31ebcaf861cdca84992177fe7bff1abdc8957989c27436863f50e22912c4829c2299460dd14fe39e3dd2907c67c3aa7f744e9fc7 WHIRLPOOL fd124e39dffcf5bea4772dd4a154beb9ef0fa52633945bba275430fa28112fec520a80abc55825741355ddce2115b9250562a7258ccb6e279c3efcb6e7bc9581
+MISC ChangeLog 889 SHA256 3a5d0f277010cba18c2e8b2d55fb83c9138c2fa849612cd28b56fe9754dfeb46 SHA512 43048d586b15fec23404a32e27c4f829dde9f99ad9fc26b44691cc7b490b604d1f8125e55315bb2cf49908e516d959e21a120521eeca690a63215e5cb23b72e7 WHIRLPOOL 7f0be275c2050ac8b6fa43915d8bbb072b431997ba587a95d4d794787cba48ee04e8f8b23bf496aafff6e51a9cfb2c301bc7bad405053205bc3b436735383459
 MISC metadata.xml 236 SHA256 feedd499ae6ddebc364ebb0f38d08bfbcc6b5d499f805a307a9367fb82dd12e8 SHA512 02882c2ecdf4fe400bf3e4455df1feae173e12b6fbb09181ea50541bb9dbf43780a0ab00fa799ccf5b7f2c27dcf9d854e16146cfb336ff3270a7b4369e451860 WHIRLPOOL b6580a9428931142ea961e985e6b5c736ab716eefb85706692c780c11f97d6019be488493c2e2a51b7ae8b480be80276edddb2858fe19684d48df64433475e06
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJU+sp5XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVCTA3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirNRsP/2ayZxhHHQ1dmcjTgJvSyKuo
-yL5fwPNGvlrnTbO0HiyBuz14b3Y8xTNSNSNw7DAkJACq3G5L3rFEeC0uuvlewgge
-unY2dcwOVjtNt9o2BkwAjEp5bNcKOw1pxiMQ1eLcjf04OycJ+p3xts5qkmSjoaf7
-gmS/hkUV5yRhkA0o2OX7FKNKkZbQRnNWGmh6s437PC/cPov6tkuN9XoZ9u0csmOV
-Byn43eayCWRjY4ZOW0TDZd7M3KH+bMejRUk+8sfM5p5hDNADCMyVqN/yVzWxm54j
-m+zSRdGBFTehvTQLm+MKDMCqnJGXSvs0TWq9yRjASkSUI3gAI98h4FrgDfoDZZTO
-XKAJN7sMh53WflktQDDKDCpV5Xlv3f3p9dup0FidD5FmMrqoWjRDBkZFWSHrDSmr
-Vb4APb1Ayl2aF4smpV0XRurRhVjsZxvnVBLJu0i/c5gcL9R7yao549ApdUhxHXWg
-TbfLqlGWdlxYYUHQ2fsnMvq4nhzeaPd8MV+YoqI/9BSTtZFlC3wTw/kty0umypOo
-YgpdrDy9MUNHB0IslsipvYbQj373MkK/t9ejZLzcZSC672WwCDERhpSKqMkD/Uun
-F6MA3IkuWoooT0QflXTLCb+4vtEE4+CFTFsnbMEbYO+Eftu6pUF/xHDS04KCzclW
-Tn/19dY4hube5RPTRnP1
-=b4L6
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirtg4P/R5umRuY6TYamR7Ky+afsNpT
+qrM1dtK1dNbJ1DHB/0egBG5RFTezgJtIMtmyJrDgjR7utalnr4SqE3vKz8s1+7yT
+rNRDjjOD9fSrHpsksLSUrsN2w7S5YpE87B01JNdOvM0RpigIcsvSRhc0u7bOKMK9
+dZyvIXgxcUzJZtEshqX3k2dA+XjxqU+IOTBeHEvskHz+m52LkfSiR6eJ74ObHfxX
+Wg59HtCU/LsasnPFdSujZAntb0CLbABTLICKSn6xmmdu3YSTRx1TI4xV3Q+lkAOg
+NcBbEGgUFO+UKkDWO5pxjVDyQKe2I57so4iFwHasBLcUTAiLMrhlRyysGLWqYt0N
+vSplOSM8VEs240FO6vogGVCijIs2QYDLz+X8YoeR9zHHMgmfxnFbmZQd/QluWOlZ
+ohtPRn+F59p5zqPczqgnx3Igk00lrsOPqc27/MwusNl2qSlCEQIWGgz8X4Z4mzzc
+tMgBlwI6n/uDm2nNEFajVglLamLar62ssWmPqnDKDHyCQ147Zfe/JcdS1jFkqZH8
+MW1e7ZYil4HEDs/adMihD0aqc/y5XmaJggkVVR3b1cdnNTkP7Q3q4mrmJB+zGkxR
+oLyy1w1DbakV60kxe2HM1ra+Xrkjlmdqt0L6eVcsJgSoeiL2Qw5OH1QgiIhMkn38
+JGHwSKzJyd7sA2GaBqEz
+=2IYZ
 -----END PGP SIGNATURE-----
