@@ -1,10 +1,10 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django-baker/django-baker-0.11-r2.ebuild,v 1.1 2015/03/07 09:52:53 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django-baker/django-baker-0.11-r2.ebuild,v 1.2 2015/03/18 07:58:46 jlec Exp $
 
 EAPI=5
 
-PYTHON_COMPAT=( python2_7 python3_{3,4} )
+PYTHON_COMPAT=( python2_7 python3_{3,4} pypy )
 
 inherit distutils-r1
 
