@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST django-oauth-plus-2.2.5.tar.gz 24875 SHA256 2d05f4f179973b0e42d3c6dea91f92b4347cdb87c32a07e0cda6c4fcfd0885e5 SHA512 22a62c093c36ded80bb1eeb06be67e8f275ab7e4f08de1fe567e8db013fa3bc3f22954bc5f3569f6c72698d069dd6a252b5c38579474daee3f91ea96a21435df WHIRLPOOL e5ef44a93ac0a891fbaf0d29140231a7b2e32b7f36fec228fb15be139785db565b52d9287e4aa74011ff6ad36cdab251e9dca325be5441ab55f318b96f517c07
+DIST django-oauth-plus-2.2.6.tar.gz 25760 SHA256 e716bfbbf14890a4d222edfb8e4567c312fb68696b81476dcaaded012f4e7b96 SHA512 839f03101c97b5e78199fa394b6518260985a766cef04c043656ed346aebd45c3a04d3278e8eb13f4a4a65c653d8a8783364bd379dfbccb66ac314b466f22df7 WHIRLPOOL bf015682232caa72c6bf9dd724e1af8281baa56a9a1b22ced19303551dbfcf733b348c9c7d87ee80f58fa9fea4dfd653c1f676a5175b683979842e892e035c31
 EBUILD django-oauth-plus-2.2.5.ebuild 1030 SHA256 d89adfb88aff03a8748bc44779a912e7fa63678f53527243c17a6cf14c43b293 SHA512 795df3e3a3d9580ac6132f6d089e6eeca5f15cfa938bd90f2ec2cce24db1885cbe9dca6366b0fbd77df4c1b186c682ee98061576dd63d8cba2c1bcac097e0b22 WHIRLPOOL 2211db2a1f7a0864eea2af5cd15658920943bd632cf300ffdbc57d66941a414d6e26d00688352d06b7e24b3a8c0f5cac34904a14d16f051bc9b612da8ef5494a
-MISC ChangeLog 2128 SHA256 72fa488d2d2a9b8d434ea6f5bb69b6bfd5a64bc85220fd726eca7751bd9ccabb SHA512 fb3595d3cb823bbef65f1e366ad16d23a28cf8376886cd8a37f5f3a5c5e17c657afbd2e5fcb54def5995b131b86420fbd50ab3d1b6b46b82c4ed7f11067950ab WHIRLPOOL d88f4bd28593afb4d2021cdf7a6d787f8f887e93d042586325eb3607b1223f9633fcdedfc508e28ce1d9b69816172759e90d13ab8e43ebdf1cf973d4a895174a
+EBUILD django-oauth-plus-2.2.6.ebuild 1098 SHA256 f12f8b36a43c4f041f11546aed582a4f1b49048601aa32486b395d2a34bbf034 SHA512 8095dbb714c2862f3b66c7096d87564efe4517b40c60838cc6e56a6b9f6e09b998cab1c428d350ac9604266080bb1b503c30c06f532b705bff9ae5d1f659fd3a WHIRLPOOL 23c51102196ffb284338a987df052141f770db796d67ece517da3d85738b3da9c71a284f8103309aa24819fc67bf812bffa06b72790cf8b4bedd47663cf4904d
+MISC ChangeLog 2259 SHA256 0c4b6ffd4eebfff1b50315951f2d8121c1b9ee70a9453fa982eba5234ee296ef SHA512 cbfa5cf4d8f14571f351d008860f6e7587b310391a57b415211a97b22af3b096cafe8283e0d1d987a43807c1803c0b1f99cf15daada3e7b4a3acb1e8017d6c26 WHIRLPOOL d3c4422a32a67fdb3ea0158c49b2f483bbe81d100f52ccb48153642503f56456113187f7f502d0f5af9e3ecbf9805835beac6ec46c4b4f9b62edde219a23e3e9
 MISC metadata.xml 240 SHA256 036505c9930f7d4fff64708f7b92655a6f3fa4d57c86c65e0af884fa46c5d6c0 SHA512 a3965847ac977f84ad8de9fe76ef7ff10ec3f9d70b32345cb95e3a658008580c0ef2ae4b055acb7d5e2db9b11b765aa8ffc3aac669e32f8d2b117486dd7a3914 WHIRLPOOL 75a2953712103fa2d4b4c7f97da8526b7cb59a0be96e38b3df6fccadcfb11ddfeaf00b5cbd64a6bd18ab45d0b54ca913e7253c88a5fdf6c7637410ff591693ee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT83u4ACgkQCaWpQKGI+9QqKQCfStqOaRZxWiO6RjqsoJU2bXi4
-Jr0An3PFYTS2vhqRUk3PMpT6IHH4Flmr
-=KrSy
+iEYEAREIAAYFAlUJLEQACgkQso7CE7gHKw1KPACfSNHml9Z6RQrEOITqhgbfCFKq
+HVcAn3G6hxvI2FHJFOuQ9emU9AXVcSWM
+=90OE
 -----END PGP SIGNATURE-----
