@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/django-baker
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django-baker/ChangeLog,v 1.3 2015/03/07 09:52:53 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django-baker/ChangeLog,v 1.4 2015/03/18 07:58:46 jlec Exp $
+
+  18 Mar 2015; Justin Lecher <jlec@gentoo.org> django-baker-0.11-r2.ebuild:
+  Add pypy support
 
 *django-baker-0.11-r2 (07 Mar 2015)
 
